edited my CSS to prevent my second chart from jumping out.

--- a/styles.css
+++ b/styles.css
@@ -34,11 +34,14 @@ img {
 	height:400px;
 	background-color: #99ccff;
 }
-/*The chart_keeper tag leaves space for my chart on my HTML page and make sure it won't jump out.
+/*The chart_keeper1 tag leaves space for my first chart on my HTML page and make sure it won't jump out.
  * Plus it also define the space's size and color.
  */
 #chart_keeper2{
-	width:600px;
+	width:700px;
 	height:400px;
 	background-color: #99ccff;
 }
+/*The chart_keeper2 tag leaves space for my second chart on my HTML page and make sure it won't jump out.
+ * Plus it also define the space's size and color.
+ */
